# site

./: .gitignore  README.md  astro.config.mjs  markdoc.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: deploy-to-pages.yml
scripts/render-katas/: Cargo.toml  template.typ
scripts/render-katas/src/: main.rs
src/: content.config.ts
src/components/: LikeC4View.astro  Mermaid.astro
src/content/architecture-styles-scenarios/: katas.yml  katasEN.yml
src/content/c4/: chocomarket-context-only.likec4  chocomarket.likec4
src/content/docs/: index.mdx
src/content/docs/en/: index.mdoc  index.mdx
src/content/docs/en/classes/: 02.md  02.mdoc  03.mdoc  04.mdoc  05.mdoc  06.mdoc
src/content/docs/en/general/: getting-started.mdoc  projects.mdoc  sources.mdoc
src/content/docs/en/scenarios/: 00-chocomarket.md  00-chocomarket.mdoc  01-mundamail.md  01-mundamail.mdoc  02-greengrant.md  02-greengrant.mdoc  03-z-power.mdoc  04-community-choices.mdoc  05-business-pages.mdoc  06-ask-zamunda.mdoc
src/content/docs/hu/: index.mdoc
src/content/docs/hu/classes/: 02.md  02.mdoc  03.mdoc  04.mdoc  05.mdoc  06.mdoc  08.mdoc  09.mdoc  10.mdoc
src/content/docs/hu/general/: getting-started.mdoc  projects.mdoc  sources.mdoc
src/content/docs/scenarios/: 00-chocomarket.md  01-mundamail.md  02-greengrant.md  05-business-pages.md
src/content/mermaid/: add.mermaid
src/pages/en/extra/: architecture-styles-scenarios.astro
src/pages/hu/extra/: architecture-styles-scenarios.astro
src/scripts/: renderMermaid.ts
src/styles/: custom.css
(+4 files in other folders)
